--- a/FragementAnimation/res/layout/main.xml
+++ b/FragementAnimation/res/layout/main.xml
@@ -32,11 +32,12 @@
         android:layout_marginLeft="20dp"
         android:text="Fragement 3"/>
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-         android:layout_height="match_parent"
-         android:orientation="vertical"/>
-        
+        android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
+        android:orientation="vertical" />
 
 </LinearLayout>
